tests/ui/enum_overflows.stderr
error: discriminant overflow on value after 4294967295
  --> $DIR/enum_overflows.rs:13:9
   |
13 |         F,
   |         ^
